Add line description endpoints
To describe a line, rather than a route. The difference is as follows:
* A route description is meant to describe a line segment in a specific direction
* A line description describes a full line, in all directions - useful when trying to draw a map line
