# src/controllers/lines.controller.ts
@@ -16,7 +16,7 @@ export default class LinesController {
     }
 
     async describeLineRoute(req: Request, res: Response) {
-        const {name, direction, from} = req.query as {name: string, direction: string, from?: string};
+        const {name, direction, from} = req.query as { name: string, direction: string, from?: string };
         this.linesService.describeLineRoute(name, direction, from)
             .then((route: Stop[]) => res.status(200).json(route))
             .catch((err: Error) => {
@@ -29,11 +29,29 @@ export default class LinesController {
                     status = 400;
                     errorMessage = err.message;
                 } else {
+                    // TODO chain promise from prisma request and log error in a catch there (and not at controller level)
                     console.error(err);
                     status = 500;
                     errorMessage = err.message;
                 }
                 res.status(status).json({error: errorMessage});
+            });
+    }
+
+    async describeLine(req: Request, res: Response) {
+        const {name} = req.query as { name: string };
+        this.linesService.describeLine(name)
+            .then(lines => res.status(200).json(lines))
+            .catch((err: Error) => {
+                res.status(500).json({error: err.message});
+            });
+    }
+
+    async describeAllLines(req: Request, res: Response) {
+        this.linesService.describeLines()
+            .then(lines => res.status(200).json(lines))
+            .catch((err: Error) => {
+                res.status(500).json({error: err.message});
             });
     }
 }
